--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -8,4 +8,35 @@
         <item name="colorAccent">@color/color_accent</item>
     </style>
 
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="StyleImageCategory">
+        <item name="android:layout_height">@dimen/dp_100</item>
+        <item name="android:layout_width">@dimen/dp_170</item>
+        <item name="android:scaleType">fitXY</item>
+    </style>
+
+    <style name="StyleViewCategory">
+        <item name="android:layout_height">@dimen/dp_30</item>
+        <item name="android:layout_width">@dimen/dp_170</item>
+        <item name="android:background">@color/color_transparent_category</item>
+    </style>
+
+    <style name="StyleTextCategory">
+        <item name="android:layout_height">@dimen/dp_30</item>
+        <item name="android:layout_width">@dimen/dp_170</item>
+        <item name="android:textSize">@dimen/sp_20</item>
+        <item name="android:textAlignment" tools:targetApi="jelly_bean_mr1">center</item>
+    </style>
+
+    <style name="StyleTextTitle">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textSize">@dimen/sp_20</item>
+        <item name="android:layout_marginLeft">@dimen/dp_8</item>
+        <item name="android:layout_marginStart">@dimen/dp_8</item>
+    </style>
 </resources>
