handle click 4 category in home screen to list movie screen

--- a/app/src/main/res/layout/item_trending.xml
+++ b/app/src/main/res/layout/item_trending.xml
@@ -21,7 +21,8 @@
             app:imageUrl="@{viewModel.mMovieObservableField.backdropPath}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:onClick="@{() -> viewModel.onClickItemTrending()}"/>
 
         <View
             android:layout_width="0dp"
