--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,8 +23,10 @@
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/view_pager"
-                android:layout_width="384dp"
+                android:layout_width="0dp"
                 android:layout_height="@dimen/dp_250"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:setAdapterViewPager="@{viewModel.trendingMovieAdapter}" />
 
             <com.rd.PageIndicatorView
@@ -55,7 +57,8 @@
                 app:layout_constraintEnd_toStartOf="@id/card_view_now_playing"
                 app:layout_constraintHorizontal_chainStyle="spread"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/view_pager">
+                app:layout_constraintTop_toBottomOf="@id/view_pager"
+                android:onClick="@{viewModel::onPopularClick}">
 
                 <ImageView
                     android:id="@+id/image_popular"
@@ -82,7 +85,8 @@
                 android:layout_marginRight="@dimen/dp_4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/card_view_popular"
-                app:layout_constraintTop_toBottomOf="@id/view_pager">
+                app:layout_constraintTop_toBottomOf="@id/view_pager"
+                android:onClick="@{viewModel::onNowPlayingClick}">
 
                 <ImageView
                     android:id="@+id/image_now_playing"
@@ -108,7 +112,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/card_view_popular"
                 app:layout_constraintTop_toBottomOf="@id/card_view_popular"
-                app:layout_constraintVertical_bias="0.3">
+                app:layout_constraintVertical_bias="0.3"
+                android:onClick="@{viewModel::onTopRatedClick}">
 
                 <ImageView
                     android:id="@+id/image_top_rate"
@@ -133,7 +138,8 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@id/card_view_now_playing"
                 app:layout_constraintTop_toBottomOf="@id/card_view_now_playing"
-                app:layout_constraintVertical_bias="0.3">
+                app:layout_constraintVertical_bias="0.3"
+                android:onClick="@{viewModel::onUpcomingClick}">
 
                 <ImageView
                     android:id="@+id/image_upcoming"
