--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -24,10 +24,10 @@
 
             <ImageView
                 android:id="@+id/image_movie"
-                imageUrl="@{viewModel.mMovieObservableField.posterPath}"
                 android:layout_width="@dimen/dp_100"
                 android:layout_height="@dimen/dp_150"
-                android:scaleType="centerCrop" />
+                android:scaleType="centerCrop"
+                app:imageUrl="@{viewModel.mMovieObservableField.posterPath}" />
 
             <TextView
                 android:id="@+id/text_title"
