--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="color_accent">#D81B60</color>
     <color name="color_transparent_category">#901e1e1e</color>
     <color name="color_iron">#D7D8DB</color>
+    <color name="color_sea_buckthorn">#F9A825</color>
 </resources>
