--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,4 +39,12 @@
         <item name="android:layout_marginLeft">@dimen/dp_8</item>
         <item name="android:layout_marginStart">@dimen/dp_8</item>
     </style>
+
+    <style name="StyleTextOverview">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textSize">@dimen/sp_15</item>
+        <item name="android:layout_marginLeft">@dimen/dp_8</item>
+        <item name="android:layout_marginStart">@dimen/dp_8</item>
+    </style>
 </resources>
