--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="color_transparent_category">#901e1e1e</color>
     <color name="color_iron">#D7D8DB</color>
     <color name="color_sea_buckthorn">#F9A825</color>
+    <color name="color_blue">#44ff00</color>
 </resources>
