--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout>
 
     <data>
 
@@ -9,7 +8,8 @@
             type="com.pt.khanh.movie.screen.detail.DetailViewModel" />
     </data>
 
-    <android.support.v4.widget.NestedScrollView
+    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
@@ -59,6 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{viewModel.movieDetailObservableField.title}"
+                android:textColor="@color/color_sea_buckthorn"
                 app:layout_constraintLeft_toRightOf="@id/image_poster"
                 app:layout_constraintTop_toBottomOf="@id/view_pager" />
 
@@ -75,13 +76,15 @@
             <TextView
                 android:id="@+id/text_overview"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/dp_8"
                 android:layout_marginTop="@dimen/dp_8"
+                android:ellipsize="end"
+                android:maxLines="7"
                 android:text="@{viewModel.movieDetailObservableField.overview}"
-                app:layout_constraintBottom_toBottomOf="@id/image_poster"
-                app:layout_constraintLeft_toRightOf="@id/image_poster"
-                app:layout_constraintRight_toLeftOf="@id/button_favorite"
+                app:colorClickableText="@color/colorPrimary"
+                app:layout_constraintEnd_toStartOf="@id/button_favorite"
+                app:layout_constraintStart_toEndOf="@id/image_poster"
                 app:layout_constraintTop_toBottomOf="@id/text_title" />
 
             <TextView
@@ -91,6 +94,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_8"
                 android:text="Genre"
+                android:textColor="@color/color_sea_buckthorn"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/image_poster" />
 
@@ -101,10 +105,10 @@
                 android:layout_margin="@dimen/dp_8"
                 android:orientation="horizontal"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_title_genre"
-                app:recyclerAdapter="@{viewModel.genreDetailAdapter}"/>
+                app:recyclerAdapter="@{viewModel.genreDetailAdapter}" />
 
             <TextView
                 android:id="@+id/text_title_cast"
@@ -113,6 +117,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_8"
                 android:text="Cast"
+                android:textColor="@color/color_sea_buckthorn"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/recycler_view_genre" />
 
@@ -123,9 +128,11 @@
                 android:layout_margin="@dimen/dp_8"
                 android:orientation="horizontal"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_title_cast"
                 app:recyclerAdapter="@{viewModel.castAdapter}" />
+
             <TextView
                 android:id="@+id/text_title_recommend"
                 style="@style/StyleTextTitle"
@@ -133,6 +140,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_8"
                 android:text="Recommend"
+                android:textColor="@color/color_sea_buckthorn"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/recycler_view_cast" />
 
@@ -143,9 +151,11 @@
                 android:layout_margin="@dimen/dp_8"
                 android:orientation="horizontal"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_title_recommend"
-                 />
+                app:recyclerAdapter="@{viewModel.movieByAdapter}" />
+
             <TextView
                 android:id="@+id/text_title_review"
                 style="@style/StyleTextTitle"
@@ -153,6 +163,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_8"
                 android:text="Review"
+                android:textColor="@color/color_sea_buckthorn"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/recycler_view_recommend" />
 
@@ -161,11 +172,23 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp_8"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/text_title_review"
-                 />
+                app:recyclerAdapter="@{viewModel.reviewAdapter}" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_4"
+                android:gravity="center"
+                android:text="@string/text_read_all_review"
+                android:textColor="@color/color_blue"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/recycler_view_review" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v4.widget.NestedScrollView>
 </layout>
