--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -9,30 +9,43 @@
             type="com.pt.khanh.movie.screen.detail.ItemCastViewModel" />
     </data>
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="wrap_content"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> viewModel.onClickItemCast()}"
+        android:padding="@dimen/dp_4">
+
+        <ImageView
+            android:id="@+id/image_cast"
+            imageUrlCast="@{viewModel.mCastObservableField.profilePath}"
+            android:layout_width="@dimen/dp_100"
+            android:layout_height="@dimen/dp_100"
+            android:scaleType="fitCenter" />
+
+        <TextView
+            android:id="@+id/text_name"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:onClick="@{() -> viewModel.onClickItemCast()}"
-            android:padding="@dimen/dp_4">
+            android:layout_marginLeft="@dimen/dp_8"
+            android:gravity="center"
+            android:singleLine="true"
+            android:text="@{viewModel.mCastObservableField.name}"
+            android:textSize="@dimen/sp_15"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/image_cast" />
 
-            <ImageView
-                android:id="@+id/image_cast"
-                imageUrlCast="@{viewModel.mCastObservableField.profilePath}"
-                android:layout_width="@dimen/dp_100"
-                android:layout_height="@dimen/dp_100"
-                android:scaleType="fitCenter" />
-
-            <TextView
-                android:id="@+id/text_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/dp_8"
-                android:singleLine="true"
-                android:gravity="center"
-                android:text="@{viewModel.mCastObservableField.name}"
-                android:textSize="@dimen/sp_15"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/image_cast" />
-        </android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/text_character"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_8"
+            android:gravity="center"
+            android:singleLine="true"
+            android:text="@{viewModel.mCastObservableField.character}"
+            android:textSize="@dimen/sp_15"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_name" />
+    </android.support.constraint.ConstraintLayout>
 </layout>
