--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -12,8 +12,8 @@
         android:title="@string/title_genre" />
 
     <item
-        android:id="@+id/navigation_search"
-        android:icon="@drawable/ic_search"
-        android:title="@string/title_search" />
+        android:id="@+id/navigation_favorite"
+        android:icon="@drawable/ic_person"
+        android:title="@string/title_favourite" />
 
 </menu>
