--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,6 +3,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.pt.khanh.movie.screen.detail.DetailViewModel" />
@@ -14,17 +16,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+
         <com.google.android.youtube.player.YouTubePlayerView
             android:id="@+id/youtube_fragment"
             android:layout_width="0dp"
             android:layout_height="@dimen/dp_250"
+            android:layout_marginTop="@dimen/dp_2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:onInitializedListener="@{viewModel.initListener}" />
 
         <ScrollView
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="@dimen/dp_2"
             android:fillViewport="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -156,6 +162,7 @@
                     android:layout_marginTop="@dimen/dp_8"
                     android:text="@string/title_review"
                     android:textColor="@color/color_sea_buckthorn"
+                    android:visibility="@{viewModel.mHasReview ? View.VISIBLE : View.GONE}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/recycler_view_recommend" />
 
@@ -164,6 +171,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/dp_8"
+                    android:nestedScrollingEnabled="false"
                     android:orientation="vertical"
                     app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                     app:layout_constraintEnd_toEndOf="parent"
