--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -26,11 +26,11 @@
             android:id="@+id/text_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_8"
             android:gravity="center"
             android:singleLine="true"
             android:text="@{viewModel.mCastObservableField.name}"
             android:textSize="@dimen/sp_15"
+            android:layout_marginTop="@dimen/dp_4"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/image_cast" />
@@ -39,11 +39,11 @@
             android:id="@+id/text_character"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_8"
             android:gravity="center"
             android:singleLine="true"
             android:text="@{viewModel.mCastObservableField.character}"
-            android:textSize="@dimen/sp_15"
+            android:textSize="@dimen/sp_10"
+            android:textColor="@color/dark_gray"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_name" />
