--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -40,7 +40,7 @@
             android:layout_marginRight="@dimen/dp_4"
             android:layout_marginTop="@dimen/dp_8"
             android:background="@null"
-            android:src="@drawable/ic_thumb_up"
+            android:src="@drawable/ic_more_vert"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
