--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,51 @@
     <color name="color_sea_buckthorn">#F9A825</color>
     <color name="color_blue">#44ff00</color>
     <color name="color_cocoa_brown">#211818</color>
+    <color name="deep_orange_50_500">#FF5722</color>
+    <color name="deep_orange_50_800">#D84315</color>
+    <color name="light_blue_50_a400">#00B0FF</color>
+    <color name="pink_50_a400">#F50057</color>
+    <color name="indigo_50_a400">#3D5AFE</color>
+    <color name="cyan_50_a400">#00E5FF</color>
+    <color name="light_green_50_a400">#76FF03</color>
+    <color name="amber_50_a400">#FFC400</color>
+    <color name="color_ato_approx">#dedede</color>
+    <color name="blue_gray_50_100">#CFD8DC</color>
+    <color name="color_teal_800">#00695C</color>
+    <color name="deep_orange_50_200">#FFAB91</color>
+    <color name="color_hint_type_comment">#67b6f4</color>
+    <color name="color_bg_comment">#e4f2fd</color>
+    <color name="deep_green_a200">#00C853</color>
+    <color name="deep_blue_700">#0091EA</color>
+    <color name="color_white">#ffffff</color>
+    <color name="dark_gray">#919191</color>
+
+    <!--color for company chart-->
+    <color name="color_red_50_700">#D32F2F</color>
+    <color name="color_red_50_300">#E57373</color>
+    <color name="color_purple_50_700">#7B1FA2</color>
+    <color name="color_purple_50_300">#BA68C8</color>
+    <color name="color_light_blue_50_700">#1976D2</color>
+    <color name="color_light_blue_50_300">#64B5F6</color>
+    <color name="color_indigo_50_700">#303F9F</color>
+    <color name="color_indigo_50_300">#7986CB</color>
+    <color name="color_teal_50_700">#00796B</color>
+    <color name="color_teal_50_300">#4DB6AC</color>
+    <color name="color_green_50_700">#388E3C</color>
+    <color name="color_green_50_300">#81C784</color>
+    <color name="color_lime_50_700">#AFB42B</color>
+    <color name="color_lime_50_300">#DCE775</color>
+    <color name="color_yellow_50_700">#FBC02D</color>
+    <color name="color_yellow_50_300">#FFF176</color>
+    <color name="color_orange_50_700">#F57C00</color>
+    <color name="color_orange_50_300">#FFB74D</color>
+    <color name="color_deep_orange_50_700">#E64A19</color>
+    <color name="color_deep_orange_50_300">#FF8A65</color>
+    <color name="color_gray_50_700">#616161</color>
+    <color name="color_gray_50_300">#E0E0E0</color>
+    <color name="color_dove_gray">#616161</color>
+    <color name="color_gray_chateau">#969FAA</color>
+    <color name="color_gray_100">#F5F5F5</color>
+    <color name="color_gray_50_900">#303130</color>
+    <color name="color_blue_50">#FFE3F2FD</color>
 </resources>
