--- a/app/src/main/res/layout/item_genre.xml
+++ b/app/src/main/res/layout/item_genre.xml
@@ -2,6 +2,7 @@
 <layout>
 
     <data>
+        <import type="android.view.View" />
 
         <variable
             name="viewModel"
@@ -16,7 +17,7 @@
         <ImageView
             android:layout_width="0dp"
             android:layout_height="@dimen/dp_100"
-            android:onClick="@{() -> viewModel.onClickItemGenres()}"
+            android:onClick="@{viewModel::onItemClick}"
             android:scaleType="fitXY"
             app:imageDrawable="@{viewModel.mGenreObservableField.imageResource}"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -34,5 +35,16 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_check_white"
+            android:background="@color/accent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:visibility="@{viewModel.isItemClick ? View.VISIBLE : View.GONE}"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="@dimen/dp_8"
+            android:layout_marginRight="@dimen/dp_8"
+            />
     </android.support.constraint.ConstraintLayout>
 </layout>
