edit progress loading

--- a/app/src/main/res/layout/fragment_genre.xml
+++ b/app/src/main/res/layout/fragment_genre.xml
@@ -3,6 +3,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.pt.khanh.movie.screen.genre.GenreViewModel" />
@@ -22,6 +24,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:setAdapter="@{viewModel.genreAdapter}"
             app:spanCount="2" />
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="@{viewModel.mIsLoading ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
 </layout>
