--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,142 +21,230 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/view_pager"
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/constrain_trending"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/dp_250"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:setAdapterViewPager="@{viewModel.trendingMovieAdapter}" />
-
-            <com.rd.PageIndicatorView
-                android:id="@+id/page_indicator_view"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_marginTop="@dimen/dp_8"
-                android:layout_marginRight="@dimen/dp_8"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:piv_animationType="scale"
-                app:piv_dynamicCount="true"
-                app:piv_interactiveAnimation="true"
-                app:piv_padding="@dimen/dp_4"
-                app:piv_radius="@dimen/dp_4"
-                app:piv_selectedColor="@android:color/white"
-                app:piv_unselectedColor="@color/color_iron"
-                app:setViewPagerIndicator="@{viewModel.viewPager}" />
+                app:layout_constraintStart_toStartOf="parent">
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/card_view_popular"
-                android:layout_width="wrap_content"
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/view_pager"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dp_250"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:setAdapterViewPager="@{viewModel.trendingMovieAdapter}" />
+
+                <com.rd.PageIndicatorView
+                    android:id="@+id/page_indicator_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_marginTop="@dimen/dp_8"
+                    android:layout_marginRight="@dimen/dp_8"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:piv_animationType="scale"
+                    app:piv_dynamicCount="true"
+                    app:piv_interactiveAnimation="true"
+                    app:piv_padding="@dimen/dp_4"
+                    app:piv_radius="@dimen/dp_4"
+                    app:piv_selectedColor="@android:color/white"
+                    app:piv_unselectedColor="@color/color_iron"
+                    app:setViewPagerIndicator="@{viewModel.viewPager}" />
+            </android.support.constraint.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/text_title_category"
+                style="@style/StyleTextTitle"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp_4"
                 android:layout_marginLeft="@dimen/dp_4"
+                android:text="@string/text_category"
+                android:textColor="@color/color_teal_50_700"
+                android:textStyle="bold"
+                android:textSize="@dimen/sp_20"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/constrain_trending" />
+
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/constrain_category"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 android:layout_marginTop="@dimen/dp_4"
-                app:layout_constraintEnd_toStartOf="@id/card_view_now_playing"
-                app:layout_constraintHorizontal_chainStyle="spread"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/view_pager"
-                android:onClick="@{viewModel::onPopularClick}">
-
-                <ImageView
-                    android:id="@+id/image_popular"
-                    style="@style/StyleImageCategory"
-                    app:imageUrl="@{viewModel.moviePopular.backdropPath}" />
-
-                <View
-                    style="@style/StyleViewCategory"
-                    android:layout_gravity="bottom" />
-
-                <TextView
-                    android:id="@+id/text_popular"
-                    style="@style/StyleTextCategory"
-                    android:layout_gravity="bottom"
-                    android:text="@string/category_popular"
-                    android:textColor="@android:color/white" />
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/card_view_now_playing"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_4"
-                android:layout_marginRight="@dimen/dp_4"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/card_view_popular"
-                app:layout_constraintTop_toBottomOf="@id/view_pager"
-                android:onClick="@{viewModel::onNowPlayingClick}">
-
-                <ImageView
-                    android:id="@+id/image_now_playing"
-                    style="@style/StyleImageCategory"
-                    app:imageUrl="@{viewModel.movieNowPlaying.backdropPath}" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/text_title_category">
 
                 <View
-                    style="@style/StyleViewCategory"
-                    android:layout_gravity="bottom" />
-
-                <TextView
-                    android:id="@+id/text_now_playing"
-                    style="@style/StyleTextCategory"
-                    android:layout_gravity="bottom"
-                    android:text="@string/category_now_playing"
-                    android:textColor="@android:color/white" />
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/card_view_top_rate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/card_view_popular"
-                app:layout_constraintTop_toBottomOf="@id/card_view_popular"
-                app:layout_constraintVertical_bias="0.3"
-                android:onClick="@{viewModel::onTopRatedClick}">
-
-                <ImageView
-                    android:id="@+id/image_top_rate"
-                    style="@style/StyleImageCategory"
-                    app:imageUrl="@{viewModel.movieTopRated.backdropPath}" />
+                    android:id="@+id/guide_horizontal"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/dp_1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/constrain_category" />
 
                 <View
-                    style="@style/StyleViewCategory"
-                    android:layout_gravity="bottom" />
+                    android:id="@+id/guide_vertical"
+                    android:layout_width="@dimen/dp_1"
+                    android:layout_height="0dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-                <TextView
-                    android:id="@+id/text_top_rate"
-                    style="@style/StyleTextCategory"
-                    android:layout_gravity="bottom"
-                    android:text="@string/category_top_rate"
-                    android:textColor="@android:color/white" />
-            </android.support.v7.widget.CardView>
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_view_popular"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginLeft="@dimen/dp_4"
+                    android:layout_marginRight="@dimen/dp_1"
+                    android:layout_marginBottom="@dimen/dp_2"
+                    android:onClick="@{viewModel::onPopularClick}"
+                    app:layout_constraintBottom_toTopOf="@id/guide_horizontal"
+                    app:layout_constraintEnd_toStartOf="@id/guide_vertical"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/constrain_category">
 
-            <android.support.v7.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="@id/card_view_now_playing"
-                app:layout_constraintTop_toBottomOf="@id/card_view_now_playing"
-                app:layout_constraintVertical_bias="0.3"
-                android:onClick="@{viewModel::onUpcomingClick}">
+                    <ImageView
+                        android:id="@+id/image_popular"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/action"
+                        app:imageUrl="@{viewModel.moviePopular.backdropPath}" />
 
-                <ImageView
-                    android:id="@+id/image_upcoming"
-                    style="@style/StyleImageCategory"
-                    app:imageUrl="@{viewModel.movieUpComing.backdropPath}" />
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_30"
+                        android:layout_gravity="bottom"
+                        android:background="@color/color_transparent_category" />
 
-                <View
-                    style="@style/StyleViewCategory"
-                    android:layout_gravity="bottom" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_30"
+                        android:layout_gravity="bottom"
+                        android:text="@string/category_popular"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/sp_20" />
+                </android.support.v7.widget.CardView>
 
-                <TextView
-                    android:id="@+id/text_upcoming"
-                    style="@style/StyleTextCategory"
-                    android:layout_gravity="bottom"
-                    android:text="@string/category_upcoming"
-                    android:textColor="@android:color/white" />
-            </android.support.v7.widget.CardView>
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_view_now_playing"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginLeft="@dimen/dp_1"
+                    android:layout_marginRight="@dimen/dp_4"
+                    android:layout_marginBottom="@dimen/dp_2"
+                    android:onClick="@{viewModel::onNowPlayingClick}"
+                    app:layout_constraintBottom_toTopOf="@id/guide_horizontal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/guide_vertical"
+                    app:layout_constraintTop_toTopOf="@id/constrain_category">
+
+                    <ImageView
+                        android:id="@+id/image_now_playing"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/action"
+                        app:imageUrl="@{viewModel.movieNowPlaying.backdropPath}" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_30"
+                        android:layout_gravity="bottom"
+                        android:background="@color/color_transparent_category" />
+
+                    <TextView
+                        android:id="@+id/text_now_playing"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_30"
+                        android:layout_gravity="bottom"
+                        android:text="@string/category_now_playing"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/sp_20" />
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_view_top_rate"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginLeft="@dimen/dp_4"
+                    android:layout_marginTop="@dimen/dp_2"
+                    android:layout_marginRight="@dimen/dp_1"
+                    android:onClick="@{viewModel::onTopRatedClick}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/guide_vertical"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/guide_horizontal">
+
+                    <ImageView
+                        android:id="@+id/image_now_top_rate"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/action"
+                        app:imageUrl="@{viewModel.movieTopRated.backdropPath}" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_30"
+                        android:layout_gravity="bottom"
+                        android:background="@color/color_transparent_category" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_30"
+                        android:layout_gravity="bottom"
+                        android:text="@string/category_top_rate"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/sp_20" />
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/card_view_upcoming"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginLeft="@dimen/dp_1"
+                    android:layout_marginTop="@dimen/dp_2"
+                    android:layout_marginRight="@dimen/dp_4"
+                    android:onClick="@{viewModel::onUpcomingClick}"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/guide_vertical"
+                    app:layout_constraintTop_toBottomOf="@id/guide_horizontal">
+
+                    <ImageView
+                        android:id="@+id/image_upcoming"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/action"
+                        app:imageUrl="@{viewModel.movieUpComing.backdropPath}" />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_30"
+                        android:layout_gravity="bottom"
+                        android:background="@color/color_transparent_category" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_30"
+                        android:layout_gravity="bottom"
+                        android:text="@string/category_upcoming"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/sp_20" />
+                </android.support.v7.widget.CardView>
+            </android.support.constraint.ConstraintLayout>
+
         </android.support.constraint.ConstraintLayout>
     </android.support.v4.widget.NestedScrollView>
 
